# agent-token-saver

./: .gitignore  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml  requirements.txt  workflow_script.js
claude_token_saver/: __init__.py  budget.py  cli.py  cli_agents.py  cli_daemon.py  cli_helpers.py  cli_hooks.py  cli_prep.py  cli_sessions.py  cli_stats.py  cli_transcript.py  cli_tui.py  common_dedup.py  compactor.py  compression_pipeline.py  compressor.py  config.py  conversation_diff.py  gitignore.py  hook_optimizer.py  incremental_context.py  path_optimizer.py  progressive.py  simhash_dedup.py  token_budget.py
claude_token_saver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
claude_token_saver/agents/: __init__.py  aider.py  base.py  claude_code.py  codex.py  continue.py  cursor.py  openclaw.py  windsurf.py
claude_token_saver/daemon/: __init__.py
claude_token_saver/hooks/: __init__.py  handler.py
claude_token_saver/prep/: __init__.py
claude_token_saver/sessions/: __init__.py
claude_token_saver/stats/: __init__.py
claude_token_saver/transcript/: __init__.py
claude_token_saver/tui/: __init__.py
claude_token_saver/utils/: __init__.py
tests/: test_core.py
